Fixed generation of izpack installer shortcuts on unix

--- a/distribution/src/izpack/readme.html
+++ b/distribution/src/izpack/readme.html
@@ -9,7 +9,7 @@ This software is provided AS-IS according to the Apache 2.0 License.
 Sorcersoft.com S.A. provides:
 <ul>
 <li>Graphical tools that enable users and service developers to easily create, deploy and use the SORCER platform.
-<li>Professional training on the SORCER platform, developing services and deploying them in your own environment
+<li>Professional training on the SORCER platform, developing services and deploying them in your own environment.
 <li>Commercial technical support and more!
 </ul>
 </body>
